--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_tag-contacts.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_tag-contacts.scss
@@ -8,7 +8,7 @@
 
   .help {
     background: $crm-light-green-color;
-    border: 1px solid $crm-green-color;
+    border: none;
     margin-bottom: 20px;
     padding: 15px 20px;
   }
