--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_relationships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_relationships.scss
@@ -15,32 +15,27 @@
     }
 
     h3 {
-      padding: 20px;
-      margin: 0;
       background: $gray-lighter;
-      color: $gray-darker;
-      font-size: $font-size-h2;
-      font-family: $font-family-base;
       border-bottom: 1px solid $crm-background;
-      margin-bottom: 25px;
+      color: $gray-darker;
+      font: $font-size-h2 $font-family-base;
+      margin: 0 0 25px;
+      padding: 12px 20px;
     }
 
     .dataTables_wrapper {
-
       .dataTables_paginate {
+        font: $font-size-base $font-family-base;
         width: 50% !important;
-        font-size: $font-size-base;
-        font-family: $font-family-base;
       }
 
       .dataTables_length {
-        font-family: $font-family-base;
-        font-size: $font-size-base;
+        font: $font-size-base $font-family-base;
       }
 
       .dataTables_info {
-        font-family: $font-family-base;
-        font-size: $font-size-base;
+        color: $gray-darker;
+        font: $font-size-base $font-family-base;
         width: 49%;
       }
     }
@@ -48,9 +43,13 @@
     div[id*="DataTables_Table_"] table {
       background: transparent;
       border: none;
-      border-radius: $panel-border-radius;
+      border-radius: $border-radius-child;
       box-shadow: $box-shadow;
+      display: block;
       font-family: $font-family-base;
+      max-width: 100%;
+      overflow-x: auto;
+      width: 100% !important;
 
       thead tr {
         border-bottom: 1px solid $crm-dark-grayblue;
@@ -58,25 +57,25 @@
         border-top-right-radius: $border-radius-base;
 
         th {
-          border-bottom: none;
           background: $gray-lighter !important;
-          color: $gray-darker;
-          vertical-align: middle;
           border: none;
-          padding: 15px 20px;
+          color: $gray-darker;
+          font-weight: $crm-font-weight-h5;
           line-height: 1.5em;
+          padding: 15px 20px;
+          vertical-align: middle;
+        }
 
-          &:first-child {
-            border-top-left-radius: $border-radius-base;
-          }
+        th:first-child {
+          border-top-left-radius: $border-radius-base;
+        }
 
-          &:last-child {
-            border-top-right-radius: $border-radius-base;
-          }
+        th:last-child {
+          border-top-right-radius: $border-radius-base;
+        }
 
-          div {
-            padding: 0;
-          }
+        th div {
+          padding: 0;
         }
       }
 
@@ -92,18 +91,28 @@
           line-height: 18px;
           padding: 10px 20px;
 
+          &:not(:last-child) {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+          }          
+
           a:not(.action-item) {
             background: none;
-            color: $brand-primary !important;
+            color: $brand-primary;
           }
 
-          .btn-slide {
-            color: $brand-primary !important;
+          .btn-slide,
+          .crm-hover-button {
             background: none;
+            color: $brand-primary;
+            text-transform: capitalize;
 
             &:hover {
-              a{
-                color: $brand-primary !important;
+              color: $crm-copy;
+
+              a {
+                color: $crm-copy;
               }
             }
           }
@@ -113,7 +122,7 @@
           border-bottom-left-radius: $border-radius-base;
           border-bottom-right-radius: $border-radius-base;
 
-          td{
+          td {
             &:first-child {
               border-bottom-left-radius: $border-radius-base;
             }
@@ -128,30 +137,30 @@
 
     h3,
     .accordion {
-      border-radius: $border-radius-base;
+      border-radius: $panel-border-radius;
       box-shadow: $box-shadow;
       margin-bottom: 10px;
     }
 
     #permission-legend {
+      color: $gray-darker;
       font-size: $font-size-base;
     }
 
     .description {
       background-color: $crm-light-green-color;
-      border: 1px solid $crm-green-color;
       border-radius: $border-radius-child;
       color: $crm-black-olive-color;
       font-size: $font-size-base;
       margin: 0 0 8px;
-      padding: 4px;
+      padding: 10px;
     }
 
     div[id*="s2id_autogen"] {
       .select2-choice {
         background: $crm-white;
-        border-radius: 2px;
         border: 1px solid $crm-darker-grayblue;
+        border-radius: $border-radius-base;
         box-shadow: $crm-select2-box-shadow-inset;
       }
 
@@ -164,12 +173,12 @@
     .font-red.label {
       background: $gray-lighter;
       border-bottom: 1px solid $crm-background;
-      border-radius: $border-radius-base;
+      border-radius: $panel-border-radius;
       box-shadow: $box-shadow;      
       color: $gray-darker !important;
-      font: $crm-font-weight-h2 $font-size-h2 $font-family-base;     
+      font: $crm-font-weight-h4 $font-size-h2 $font-family-base;     
       margin: 0 0 10px;
-      padding: 20px;
+      padding: 12px 20px;
     }
 
     .crm-icon {
