--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_change-log.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_change-log.scss
@@ -2,8 +2,8 @@
   & > div.bold {
     background: $gray-lighter;
     border-bottom: 1px solid $crm-background;
-    border-top-left-radius: $border-radius-base;
-    border-top-right-radius: $border-radius-base;
+    border-top-left-radius: $panel-border-radius;
+    border-top-right-radius: $panel-border-radius;
     box-shadow: $box-shadow;
     color: $gray-darker;
     font: $headings-font-weight $font-size-h2 $font-family-base;
@@ -15,28 +15,32 @@
   }
 
   .form-item {
-    border-radius: $border-radius-base;
+    border-radius: 0 0 $border-radius-child $border-radius-child;
     box-shadow: $crm-form-item-shadow;
+    overflow: hidden;
     padding: 0;
   }
 
   table {
     @include mx-expandable-table();
-    border-radius: $border-radius-base;
+    border-radius: $border-radius-child;
     box-shadow: none !important;
 
-    .columnheader th {
-      padding: 10px 20px !important;
-      text-transform: capitalize;
+    .columnheader {
+      border-color: $crm-dark-grayblue;
 
-      &:first-child {
+      th {
+        text-transform: capitalize;
+      }
+
+      th:first-child {
         width: $crm-sm-th-width;
       }
     }
 
     tbody tr {
       td {
-        padding: 10px 20px;
+        padding: 15px 20px;
       }
 
       &:last-child {
