--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_detail.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_detail.scss
@@ -426,7 +426,7 @@
       line-height: 17px;
       left: 2px;
       margin-top: 2px !important;
-      top: 0px !important;
+      top: 0 !important;
       width: 17px;
     }
 
