--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/_mixins.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/_mixins.scss
@@ -9,3 +9,10 @@
   #{$property}: -webkit-calc(#{$expression}) $content;
   #{$property}: calc(#{$expression}) $content;
 }
+
+/* mixin for box sizing */
+@mixin border-box() {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
