--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_relationships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_relationships.scss
@@ -18,7 +18,7 @@
       background: $gray-lighter;
       border-bottom: 1px solid $crm-background;
       color: $gray-darker;
-      font: $font-size-h2 $font-family-base;
+      font: $crm-font-weight-h2 $font-size-h2 $font-family-base;
       margin: 0 0 25px;
       padding: 12px 20px;
     }
@@ -45,10 +45,8 @@
       border: none;
       border-radius: $border-radius-child;
       box-shadow: $box-shadow;
-      display: block;
       font-family: $font-family-base;
       max-width: 100%;
-      overflow-x: auto;
       width: 100% !important;
 
       thead tr {
@@ -89,13 +87,29 @@
           border: none;
           color: $gray-dark;
           line-height: 18px;
-          padding: 10px 20px;
+          max-width: 92px;
+          min-width: 76px;
+          padding: 10px 10px 10px 20px;
 
-          &:not(:last-child) {
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
-          }          
+          &:nth-child(3),
+          &:nth-child(4) {
+            max-width: 130px;
+          }
+
+          &:last-child {
+            max-width: 100px;
+            padding: 10px 20px 10px 10px;
+            text-align: right;
+            width: 100px;
+
+            span {
+              display: inline-block;
+            }
+          }
+
+          &.dataTables_empty {
+            text-align: center;
+          }
 
           a:not(.action-item) {
             background: none;
@@ -114,6 +128,16 @@
               a {
                 color: $crm-copy;
               }
+            }
+          }
+
+          .btn-slide {
+            padding: 3px 0 !important;
+            text-indent: -9999px;
+            width: 5px;
+
+            &:after, .panel {
+              text-indent: 0;
             }
           }
         }
@@ -176,7 +200,7 @@
       border-radius: $panel-border-radius;
       box-shadow: $box-shadow;      
       color: $gray-darker !important;
-      font: $crm-font-weight-h4 $font-size-h2 $font-family-base;     
+      font: $crm-font-weight-h2 $font-size-h2 $font-family-base;     
       margin: 0 0 10px;
       padding: 12px 20px;
     }
