AI-83: Fix suggested issues in PR

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_manage-groups.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_manage-groups.scss
@@ -148,7 +148,7 @@
     }
 
     #_qf_GroupContact_next {
-      background: $brand-primary url(../../../../../i/plus-icon.png) 8px 11px no-repeat;
+      background: $brand-primary url(../images/plus-icon.png) 8px 11px no-repeat;
       border: none;
       height: 27px;
       line-height: 27px;
