--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -309,7 +309,7 @@
         </div>
       </div>
       <div
-        ng-show="($ctrl.isRole('manager') && $ctrl.statusBeforeEdit.value === '3') || $ctrl.directiveOptions.forStaff"
+        ng-show="$ctrl.isRole('manager') || $ctrl.directiveOptions.forStaff"
         class="row chr_leave-request-modal__response">
         <div class="col-xs-12 form-horizontal">
           <div class="form-group">
